Closed
Bug 1313130
Opened 9 years ago
Closed 9 years ago
E10s: Hovering Over <Select> and pressing Backspace Navigates to Previous Page
Categories
(Toolkit :: Form Manager, defect)
Tracking
()
VERIFIED
FIXED
mozilla53
People
(Reporter: jwilliams, Assigned: enndeakin)
References
(Blocks 1 open bug, )
Details
(Keywords: regression)
Attachments
(1 file)
|
10.14 KB,
patch
|
bytesized
:
review+
jcristau
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
STR:
Pre-Req
Have a previous page
1. Navigate to https://people.mozilla.org/~mnoorenberghe/w3c_notifications.htm
2. Click the Direction datalist
3. Hover over a selection
4. Press Backspace
Expected:
The datalist popup is closed
Actual:
Browser Navigates to previous page
This is e10s specific. When e10s = False, the datalist popup stays open.
All Windows Platforms are affected
Ubuntu is not affected
| Reporter | ||
Updated•9 years ago
|
No longer blocks: 1296638
Summary: E10s: Hovering Over Non-login field with datalist and pressing Backspace Navigates to Previous Page → E10s: Hovering Over <Select> and pressing Backspace Navigates to Previous Page
| Reporter | ||
Comment 1•9 years ago
|
||
| regression-window | ||
mozregression --bad 9-18-2015 --good 9-17-2016
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e7d613b3bcfe1e865378bfac37de64560d1234ec&tochange=11dc79e232110ba6de5179e46dfbda77b52a88c3
I suspect bug 1191897 is what caused this regression.
Neil I see you worked on bug 1191897. Is this the intended functionality?
Flags: needinfo?(enndeakin)
| Reporter | ||
Updated•9 years ago
|
status-firefox49:
--- → wontfix
status-firefox50:
--- → affected
status-firefox51:
--- → affected
Keywords: regression
| Assignee | ||
Comment 2•9 years ago
|
||
I don't think it was intended or not intended. Should be easy enough to add a special case for the backspace key here.
Flags: needinfo?(enndeakin)
Comment 3•9 years ago
|
||
Neil, David said to assign this to you :)
Assignee: nobody → enndeakin
Blocks: e10s-select
| Assignee | ||
Comment 4•9 years ago
|
||
This patch removes ignorekeys="handled" and switches to ignorekeys="shortcuts".
The old behaviour was to not call preventDefault on keys that the menu handled itself. However, I don't think that is quite what we wanted to fix 1191897, as it causes different behaviour when you press a key that matches a menu label versus a key that doesn't.
Instead, I switch to a different behaviour which doesn't call preventDefault only when the accelerator key is down.
Attachment #8814156 -
Flags: review?(ksteuber)
Updated•9 years ago
|
Attachment #8814156 -
Flags: review?(ksteuber) → review+
| Assignee | ||
Comment 5•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/70791e56e69ae0ce66c430a6e453eff5aeeef09e
Bug 1313130, change menu shortcut handling so that Windows does not call preventDefault only when the accelerator key is down rather than when a key isn't handled, r=ksteuber
Comment 6•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Too late to fix in 50.1.0 release
| Reporter | ||
Comment 8•9 years ago
|
||
I can verify this is fixed on the current nightly.
Status: RESOLVED → VERIFIED
Comment 9•9 years ago
|
||
Please request Aurora/Beta approval on this when you get a chance.
Flags: needinfo?(enndeakin)
| Assignee | ||
Comment 10•9 years ago
|
||
Comment on attachment 8814156 [details] [diff] [review]
Modify menu shortcut handling a bit
Approval Request Comment
[Feature/Bug causing the regression]:1191897
[User impact if declined]:better handling of keyboard shortcuts when a select popup is open
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]:no
[Is the change risky?]:no
[Why is the change risky/not risky?]: improved version of 1191897
[String changes made/needed]:no
Flags: needinfo?(enndeakin)
Attachment #8814156 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
Comment 11•9 years ago
|
||
Comment on attachment 8814156 [details] [diff] [review]
Modify menu shortcut handling a bit
menu shortcut handling fix, aurora52+
Attachment #8814156 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 12•9 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•